--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-i
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liam Reid &mdash; JavaJam Coffee House</title>
+    <meta name="description" content="JavaJam Coffee Bar Case Study">
+    <meta name="author" content="Liam Reid">
+    <meta name="keywords" content="Homework, USU, Data Analytics and Information Systems">
+
+    <link href="javajam.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <div id="wrapper">
+      <header>
+        <h1>JavaJam Coffee Bar</h1>
+      </header>
+      <nav>
+        <a href="index.html">Home</a> &nbsp;
+        <a href="menu.html">Menu</a> &nbsp;
+        <a href="music.html">Music</a> &nbsp;
+        <a href="jobs.html">Jobs</a>
+      </nav>
+      <main>
+        <h2>Relax at JavaJam</h2>
+        <p>Friendly and eclectic &mdash; JavaJam Coffee Bar is the perfect place to take a date and kiss her or propose if you're into that,
+            enjoy a refreshing non alcoholic or alcoholic beverage, and have a snack or incredibly heavy meal(we serve mercury which one gram is equal to 1 billion calories).</p>
+        <ul>
+            <li>Specialty Coffee and Organic Spiked Tea</li>
+            <li>Bagels, Muffins, and Gluten-free Mercury Laced Pastries</li>
+            <li>Organic Salads</li>
+            <li>Music and Comic Book Readings</li>
+            <li>Open Mic Night</li>
+        </ul>
+        <div>
+            12010 Aggie Blvd<br>
+            Logan, Utah 84321<br>
+            888-420-1234<br><br>
+        </div>
+      </main>
+      <footer>
+        <small><i>Copyright &copy; 2022 JavaJam Coffee Bar<br>
+        <a href="mailto:liam@reid.com">liam@reid.com</a>
+      </footer>
+    </div>
+  </body>
